MODIFY BUTTON GROUP

--- a/index.html
+++ b/index.html
@@ -89,7 +89,28 @@ title: Machine Learning, Computer Vision: Research
 		<div class="btn-group">
 			<button type="button" onclick="setBG_Black()" class="btn btn-primary">HIGH CONTRAST</button>
 			<button type="button" onclick="setBG_White()" class="btn btn-primary">STD  CONTRAST</button>
-			
+		</div>
+		
+		<div class="btn-group">
+			<div class="dropdown">
+				<button class="dropbtn">Prototypes and Research Papers</button>
+				<div class="dropdown-content">
+					<script> HIDING THIS CODE:
+							<h5 class="dropdown-header">GitHub Hosted Web Sites</h5>
+							<li><a class="dropdown-item" href="/cs6460" title="cs6460">cs6460</a></li>
+							<li><a class="dropdown-item" href="https://rbobkoskie3.github.io/" title="HCI Research" target="_blank">HCI Research</a></li>
+							<li><a class="dropdown-item" href="#" title="Future Use">LINK</a></li>
+					</script>
+					<h5 class="dropdown-header">Research</h5>
+					<li><a class="dropdown-item" href="/cs7646" title="Machine Learning (ML)">Machine Learning (ML)</a></li>
+					<li><a class="dropdown-item" href="/cs6238" title="Secure Computer Systems (SCI)">Secure Computer Systems (SCI)</a></li>
+					<li><a class="dropdown-item" href="/cs6750" title="Human-Computer Interaction (HCI)">Human-Computer Interaction (HCI)</a></li>
+					<h5 class="dropdown-header">Computer Vision (CV)</h5>
+					<li><a class="dropdown-item" href="https://goo.gl/photos/KEpwD9mZ3EBcycQk7"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype-1</a></li>
+					<li><a class="dropdown-item" href="https://goo.gl/photos/Hv9WaPvd4QrQJ9TZA"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype-2</a></li>
+				</div>
+			</div>
+			<div class="btn-group">
 			<div class="dropdown">
 				<button class="dropbtn">Prototypes and Research Papers</button>
 				<div class="dropdown-content">
