--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@ title: Machine Learning, Computer Vision: Research
 					<li><a class="dropdown-item" href="https://goo.gl/photos/Hv9WaPvd4QrQJ9TZA"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype-2</a></li>
 				</div>
 			</div>
-			<div class="btn-group">
+		</div>
+		
+		<div class="btn-group">
 			<div class="dropdown">
 				<button class="dropbtn">Prototypes and Research Papers</button>
 				<div class="dropdown-content">
