MODIFY BUTTON GROUP

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ title: Machine Learning, Computer Vision: Research
 		</ul></nav>
 	
 		<div><p>
-			Select High Contrast, or Standard (STD) Contrast for the webpage.
+			Select High ---- Contrast, or Standard (STD) Contrast for the webpage.
 		</div></p>
 		
 		<div class="btn-group">
