MODIFY BUTTON GROUP

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ title: Machine Learning, Computer Vision: Research
 		</ul></nav>
 	
 		<div><p>
-			Select High ---- Contrast, or Standard (STD) Contrast for the webpage.
+			Select High Contrast, or Standard (STD) Contrast for the webpage.
 		</div></p>
 		
 		<div class="btn-group">
@@ -93,7 +93,7 @@ title: Machine Learning, Computer Vision: Research
 		
 		<div class="btn-group">
 			<div class="dropdown">
-				<button class="dropbtn">Prototypes and Research Papers</button>
+				<button class="dropbtn">Prototypes ---- and Research Papers</button>
 				<div class="dropdown-content">
 					<script> HIDING THIS CODE:
 							<h5 class="dropdown-header">GitHub Hosted Web Sites</h5>
