--- a/cs6750/index.html
+++ b/cs6750/index.html
@@ -40,7 +40,7 @@ title: Human-Computer Interaction
 
 		<footer>
 			<ul>
-				<p>If I'm interested in further discussing Computer Security best practices with others. Enter comments/questions in textbox and click "Send".</p>
+				<p>I'm interested in further discussing Computer Security best practices with others. Enter comments/questions in textbox and click "Send".</p>
 				<form action="mailto:rbobkoskie3@gatech.edu" method="GET">
 					<textarea name="body"></textarea>
 					<input type="submit" value="Send" />
