MODIFY YML BUILD ERROR

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Research: Machine Learning, Computer Vision, Human Computer Interaction
+title: "Research: Machine Learning, Computer Vision, Human Computer Interaction"
 ---
 <!DOCTYPE html>
 <html>
