--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 layout: default
 ---
-<!DOCTYPE html>
 <html>
 	<head>
 		<img id ="gtech" class="center fit" style="width:500px;height:101px" src="images\gtech.png">
@@ -100,7 +99,7 @@ layout: default
 					<h5 class="dropdown-header">Research</h5>
 					<li><a class="dropdown-item" href="/cs7646" title="Machine Learning (ML)">Machine Learning (ML)</a></li>
 					<li><a class="dropdown-item" href="/cs6238" title="Secure Computer Systems (SCI)">Secure Computer Systems (SCI)</a></li>
-					<li><a class="dropdown-item" href="/cs6750" title="Human Computer Interaction (HCI)">Human-Computer Interaction (HCI)</a></li>
+					<li><a class="dropdown-item" href="/cs6750" title="Human Computer Interaction (HCI)">Human Computer Interaction (HCI)</a></li>
 					<h5 class="dropdown-header">Computer Vision (CV)</h5>
 					<li><a class="dropdown-item" href="https://goo.gl/photos/KEpwD9mZ3EBcycQk7"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype-1</a></li>
 					<li><a class="dropdown-item" href="https://goo.gl/photos/Hv9WaPvd4QrQJ9TZA"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype-2</a></li>
