WORKING: NOT ML

--- a/cs6750/index.html
+++ b/cs6750/index.html
@@ -1,6 +1,6 @@
 <head>
     <style>
-        <h1>Human-Computer Interaction</h1>
+        <h1>Human Computer Interaction</h1>
     </style>
 </head>
 
