--- a/cs7646/index.html
+++ b/cs7646/index.html
@@ -1,33 +1,38 @@
 <head>
-    <style>
-        .btn-group button {
-				background-color: #4CAF50; /* Green background */
-				border: 1px solid green; /* Green border */
-				color: white; /* White text */
-				font-weight: bold;
-				font-size: 18px;
-				padding: 10px 24px; /* Some padding */
-				cursor: pointer; /* Pointer/hand icon */
-				float: left; /* Float the buttons side by side */
-			}
-		
-		/* Clear floats (clearfix hack) */
-			.btn-group button:after {
-				content: "";
-				clear: both;
-				display: table;
-			}
-
-			.btn-group button:not(:last-child) {
-				border-right: none; /* Prevent double borders */
-			}
-
-			/* Add a background color on hover */
-			.btn-group button:hover {
-				background-color: #3e8e41;
-			}
-    </style>
+	<img id ="gtech" class="center fit" style="width:500px;height:101px" src="images\gtech.png">
+	<!-- link to main stylesheet -->
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<br><br>
 </head>
+
+<style>
+	.btn-group button {
+			background-color: #4CAF50; /* Green background */
+			border: 1px solid green; /* Green border */
+			color: white; /* White text */
+			font-weight: bold;
+			font-size: 18px;
+			padding: 10px 24px; /* Some padding */
+			cursor: pointer; /* Pointer/hand icon */
+			float: left; /* Float the buttons side by side */
+		}
+	
+	/* Clear floats (clearfix hack) */
+		.btn-group button:after {
+			content: "";
+			clear: both;
+			display: table;
+		}
+
+		.btn-group button:not(:last-child) {
+			border-right: none; /* Prevent double borders */
+		}
+
+		/* Add a background color on hover */
+		.btn-group button:hover {
+			background-color: #3e8e41;
+		}
+</style>
 
 <body>
 	<nav><ul>
@@ -40,6 +45,7 @@
 			<button type="button" onclick="setBG_Black()" class="btn btn-primary">HIGH CONTRAST</button>
 			<button type="button" onclick="setBG_White()" class="btn btn-primary">STD  CONTRAST</button>
 	</div>
+	<br><br>
 	<script>
 			var gtech =  document.getElementById("gtech");
 			function setBG_Black() {
