--- a/cs7646/index.html
+++ b/cs7646/index.html
@@ -68,7 +68,7 @@
         class projects.
     <br>
 	<h1>ML Papers</h1>
-		<nav><ul>
+		<ul style="list-style: none;">
 			<li><a href="docs/Demo_ML_SL_DT.pdf" title="Decision Tree Tutorial" target="_self">Decision Tree Tutorial</a></li>
 			<li><a href="docs/rbobkoskie3-analysisP1.pdf" title="Supervised Learning" target="_self">Supervised Learning</a></li>
 			<li><a href="docs/rbobkoskie3-analysisP2.pdf" title="Randomized Optimization" target="_self">Randomized Optimization</a></li>
@@ -82,7 +82,7 @@
 			<li><a href="docs/report_Strategy_Learner.pdf" title="Predicting Stock Pricing with Strategy Learners" target="_self">Predicting Stock Pricing with Strategy Learners</a></li>
 						
 			<li><a href="docs/Project3_Reflection-rbobkoskie3.pdf" title="Artificial Intelligence through Computer Vision" target="_self">Artificial Intelligence through Computer Vision</a></li>
-		</ul></nav>
+		</ul>
 		<br><br><br>
 
 		<footer>
