--- a/cs6750/index.html
+++ b/cs6750/index.html
@@ -1,13 +1,65 @@
 <head>
-    <style>
-        <h1>Human Computer Interaction</h1>
-    </style>
+	<img id ="gtech" class="center fit" style="width:500px;height:101px" src="images\gtech.png">
+	<!-- link to main stylesheet -->
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<br><br>
 </head>
+
+<style>
+	.btn-group button {
+			background-color: #4CAF50; /* Green background */
+			border: 1px solid green; /* Green border */
+			color: white; /* White text */
+			font-weight: bold;
+			font-size: 18px;
+			padding: 10px 24px; /* Some padding */
+			cursor: pointer; /* Pointer/hand icon */
+			float: left; /* Float the buttons side by side */
+		}
+	
+	/* Clear floats (clearfix hack) */
+		.btn-group button:after {
+			content: "";
+			clear: both;
+			display: table;
+		}
+
+		.btn-group button:not(:last-child) {
+			border-right: none; /* Prevent double borders */
+		}
+
+		/* Add a background color on hover */
+		.btn-group button:hover {
+			background-color: #3e8e41;
+		}
+</style>
 
 <body>
 	<nav><ul>
 		<a href="/" target="_self">Home</a>	                	
 	</ul></nav>
+	<div><p>
+			Select High Contrast, or Standard (STD) Contrast for the webpage.
+	</div></p>
+	<div class="btn-group">
+			<button type="button" onclick="setBG_Black()" class="btn btn-primary">HIGH CONTRAST</button>
+			<button type="button" onclick="setBG_White()" class="btn btn-primary">STD  CONTRAST</button>
+	</div>
+	<br><br>
+	<script>
+			var gtech =  document.getElementById("gtech");
+			function setBG_Black() {
+				document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
+				document.body.style.color = "yellow";
+				gtech.src = "https://robert-bobkoskie.github.io/cs6460/images/gtech_HCS.png";
+			}
+			function setBG_White() {
+				document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
+				document.body.style.color = "black";
+				gtech.src = "https://robert-bobkoskie.github.io/cs6460/images/gtech.png";
+			}
+	</script>
+	
     <h1>About the Research</h1>
     <div><p>
 		The work originates from
@@ -16,7 +68,7 @@
         class projects.
     <br>
 	<h1>HCI Papers</h1>
-		<nav><ul>
+		<ul style="list-style: none;">
 			<li><a class="dropdown-item" href="https://rbobkoskie3.github.io/" title="Human-Computer Interaction (HCI) Interface Prototype for Sonification" target="_blank">Human-Computer Interaction (HCI) Interface Prototype</a></li>
 			<li><a href="docs/AssistiveTechnology_VisuallyImpaired.pdf" title="Assistive Technology for the Visually Impaired" target="_self">Assistive Technology for the Visually Impaired</a></li>
 			<li><a href="docs/ASSIGNMENT_M1-rbobkoskie3.pdf" title="A Better User Interface for the Visually Impaired: Problem Space Definition, Needfinding" target="_self">A Better User Interface for the Visually Impaired: Problem Space Definition, Needfinding</a></li>
@@ -30,7 +82,7 @@
 			<li><a href="docs/ASSIGNMENT_P4-rbobkoskie3.pdf" title="Task Analysis and Distributed Cognition" target="_self">Task Analysis and Distributed Cognition</a></li>
 			<li><a href="docs/ASSIGNMENT_P5-rbobkoskie3.pdf" title="Human Computer Interface Principles: Interfaces and Political Motivation" target="_self">Human Computer Interface Principles: Interfaces and Political Motivation</a></li>
 			<li><a class="dropdown-item" href="MICROWAVE_PROTOTYPE" title="Human-Computer Interaction (HCI) Interface Prototype for Design Principles" target="_blank">Human-Computer Interaction (HCI) UNDER DEVELOPMENT Microwave Interface Prototype</a></li>
-		</ul></nav>
+		</ul>
 		<br><br><br>
 
 		<footer>
