--- a/cs6238/index.html
+++ b/cs6238/index.html
@@ -1,29 +1,81 @@
 <head>
-    <style>
-        <h1>Secure Computer Systems</h1>
-    </style>
+	<img id ="gtech" class="center fit" style="width:500px;height:101px" src="images\gtech.png">
+	<!-- link to main stylesheet -->
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<br><br>
 </head>
+
+<style>
+	.btn-group button {
+			background-color: #4CAF50; /* Green background */
+			border: 1px solid green; /* Green border */
+			color: white; /* White text */
+			font-weight: bold;
+			font-size: 18px;
+			padding: 10px 24px; /* Some padding */
+			cursor: pointer; /* Pointer/hand icon */
+			float: left; /* Float the buttons side by side */
+		}
+	
+	/* Clear floats (clearfix hack) */
+		.btn-group button:after {
+			content: "";
+			clear: both;
+			display: table;
+		}
+
+		.btn-group button:not(:last-child) {
+			border-right: none; /* Prevent double borders */
+		}
+
+		/* Add a background color on hover */
+		.btn-group button:hover {
+			background-color: #3e8e41;
+		}
+</style>
 
 <body>
 	<nav><ul>
 		<a href="/" target="_self">Home</a>	                	
 	</ul></nav>
+	<div><p>
+			Select High Contrast, or Standard (STD) Contrast for the webpage.
+	</div></p>
+	<div class="btn-group">
+			<button type="button" onclick="setBG_Black()" class="btn btn-primary">HIGH CONTRAST</button>
+			<button type="button" onclick="setBG_White()" class="btn btn-primary">STD  CONTRAST</button>
+	</div>
+	<br><br>
+	<script>
+			var gtech =  document.getElementById("gtech");
+			function setBG_Black() {
+				document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
+				document.body.style.color = "yellow";
+				gtech.src = "https://robert-bobkoskie.github.io/cs6460/images/gtech_HCS.png";
+			}
+			function setBG_White() {
+				document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
+				document.body.style.color = "black";
+				gtech.src = "https://robert-bobkoskie.github.io/cs6460/images/gtech.png";
+			}
+	</script>
+	
     <h1>About the Research</h1>
     <div><p>
         The work originates from CS6238: Secure Computer Systems (SCS) class projects.
     <br>
 	<h1>SCS Papersn</h1>
-		<nav><ul>
+		<ul style="list-style: none;">
 			<li><a href="docs/Client_Server_Security.pdf" title="A discussion on Client Server Security" target="_self">A discussion on Client Server Security</a></li>
 			<li><a href="docs/2-Factor_Auth.pdf" title="Factor Authentication" target="_self">2-Factor Authentication</a></li>
 			<li><a href="docs/Exploring_SetUID.pdf" title="Exploring SetUID" target="_self">Exploring SetUID</a></li>
 			<li><a href="docs/Memory_Protection.pdf" title="Memory Protection" target="_self">Memory Protection</a></li>
-		</ul></nav>
+		</ul>
 	<br>
 	<h1>A Demonstration of a Working Prototype for Secure Communication Between a Client <= Certificate Authority (CA)  => Server.</h1>
-		<nav><ul>
+		<ul style="list-style: none;">
 			<li><a href="https://youtu.be/E8Y9mq0nm7A" title="Prototype" target="_blank">Prototype</a></li>
-		</ul></nav>
+		</ul>
 	<br><br><br>
 
 		<footer>
