--- a/cs6238/index.html
+++ b/cs6238/index.html
@@ -72,7 +72,9 @@
 			<li><a href="docs/Memory_Protection.pdf" title="Memory Protection" target="_self">Memory Protection</a></li>
 		</ul>
 	<br>
-	<h1>A Demonstration of a Working Prototype for Secure Communication Between a Client <= Certificate Authority (CA)  => Server.</h1>
+	<div><p>
+			A Demonstration of a Working Prototype for Secure Communication Between a Client <= Certificate Authority (CA)  => Server.
+	</div></p>
 		<ul style="list-style: none;">
 			<li><a href="https://youtu.be/E8Y9mq0nm7A" title="Prototype" target="_blank">Prototype</a></li>
 		</ul>
