--- a/cs6238/index.html
+++ b/cs6238/index.html
@@ -64,7 +64,7 @@
     <div><p>
         The work originates from CS6238: Secure Computer Systems (SCS) class projects.
     <br>
-	<h1>SCS Papersn</h1>
+	<h1>SCS Papers</h1>
 		<ul style="list-style: none;">
 			<li><a href="docs/Client_Server_Security.pdf" title="A discussion on Client Server Security" target="_self">A discussion on Client Server Security</a></li>
 			<li><a href="docs/2-Factor_Auth.pdf" title="Factor Authentication" target="_self">2-Factor Authentication</a></li>
