--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		</ul></nav>
 	
 		<div><p>
-			Select High Contrast, or Standard (STD) Contrast for the webpage.
+			TEST Select High Contrast, or Standard (STD) Contrast for the webpage.
 		</div></p>
 		
 		<div class="btn-group">
