ADD WORK PROJECTS

--- a/WorkProjects/index.html
+++ b/WorkProjects/index.html
@@ -60,7 +60,7 @@
 			}
 	</script>
 	
-    <h1>About the ---Papers</h1>
+    <h1>About the Papers</h1>
     <div><p>
 		The work originates from
         <a href="http://omscs6750.gatech.edu/"
