WORK PROJECTS: MODIFY IMAGE

--- a/WorkProjects/index.html
+++ b/WorkProjects/index.html
@@ -1,5 +1,5 @@
 <head>
-	<img id ="gtech" class="center fit" style="width:500px;height:101px" src="images\gtech.png">
+	<img id ="gtech" class="center fit" style="width:500px;height:101px" src="images\images/concat_img.png">
 	<!-- link to main stylesheet -->
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<br><br>
@@ -51,12 +51,12 @@
 			function setBG_Black() {
 				document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
 				document.body.style.color = "yellow";
-				gtech.src = "https://robert-bobkoskie.github.io/cs6460/images/gtech_HCS.png";
+				gtech.src = "images/im_hc.png";
 			}
 			function setBG_White() {
 				document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
 				document.body.style.color = "black";
-				gtech.src = "https://robert-bobkoskie.github.io/cs6460/images/gtech.png";
+				gtech.src = "images/concat_img.png";
 			}
 	</script>
 	
