WORK PROJECTS: presentations

--- a/WorkProjects/index.html
+++ b/WorkProjects/index.html
@@ -63,7 +63,7 @@
     <h1>TRIALS</h1>
     <div><p>
 		I've participated in trials originating from international standards bodies as well as corporate sponsored research into novel applications for improved efficiency and cost savings for VoIP products.
-		This is an <a href="docs/SIPI_TestCall.wav"
+		This is an <a href="Trials/SIPI_TestCall.wav"
 		              target="_blank">RTP Stream</a>
 		captured from the first successful voice call between Tata Communications and France Telecom Orange via SIP.I (ITU.T 1Q.1912.5). This is the first step of a project designed to offload TDM traffic between Tata Communications and France Telecom Orange to an IP network utilizing SIP.I.
 		This project leveraged Tata Communications experience from a GSMA trial regarding SIP.I connectivity between international carriers. See Presentations for more information on this trial.
