--- a/WorkProjects/index.html
+++ b/WorkProjects/index.html
@@ -60,13 +60,15 @@
 			}
 	</script>
 	
-    <h1>TRIALS</h1>
+    <h1 id="TRIALS">TRIALS</h1>
     <div><p>
 		I've participated in trials originating from international standards bodies as well as corporate sponsored research into novel applications for improved efficiency and cost savings for VoIP products.
 		This is an <a href="Trials/SIPI_TestCall.wav"
 		              target="_blank">RTP Stream</a>
 		captured from the first successful voice call between Tata Communications and France Telecom Orange via SIP.I (ITU.T 1Q.1912.5). This is the first step of a project designed to offload TDM traffic between Tata Communications and France Telecom Orange to an IP network utilizing SIP.I.
-		This project leveraged Tata Communications experience from a GSMA trial regarding SIP.I connectivity between international carriers. See Presentations for more information on this trial.
+		This project leveraged Tata Communications experience from a GSMA trial regarding SIP.I connectivity between international carriers.
+		See <a href="#PRESENTATIONS">Presentations</a>
+		for more information on this trial.
 		
 		The work originates from
         <a href="http://omscs6750.gatech.edu/"
@@ -74,7 +76,7 @@
         class projects.
     </p><</div><br>
 	
-	<h1>PRESENTATIONS</h1>
+	 <h1 id="PRESENTATIONS">PRESENTATIONS</h1>
     <div><p>
 		I presentated original work at the GSMA Trial Team Meeting-21, September 16-17, 2008.
 		The presentation was derived from development activities while working at Tata Communications.
