WORK PROJECTS: presentations

--- a/WorkProjects/index.html
+++ b/WorkProjects/index.html
@@ -74,7 +74,7 @@
         <a href="http://omscs6750.gatech.edu/"
         target="_blank">CS6750: Human-Computer Interaction (HCI)</a>
         class projects.
-    </p><</div><br>
+    </p></div><br>
 	
 	 <h1 id="PRESENTATIONS">PRESENTATIONS</h1>
     <div><p>
@@ -93,7 +93,7 @@
 		<br>
 		Here is an RTP stream captured by a probe (running Wireshark) that was located in Tata Communications network. This is one of the first successful calls between mobile operators over an IP eXchange (IPX) framework consisting of:
 		TELUS <=SIP-I (ANSI88)=> Tata Communications <=SIP-I (ITU-T92+)=> Telekom Austria. The voice quality of this call was subjectively rated by the two parties on call. The voice quality was also objectively verified through QOS (Jitter, Latency, Packet Loss, R-Factor) measurements.
-    </p><</div><br>
+    </p></div><br>
 		
 	<h1>SCS Papers</h1>
 		<ul style="list-style: none;">
