WORK PROJECTS: presentations

--- a/WorkProjects/index.html
+++ b/WorkProjects/index.html
@@ -1,5 +1,5 @@
 <head>
-	<img id ="gtech" class="center fit" style="width:500px;height:101px" src="images\images/concat_img.png">
+	<img id ="gtech" class="center fit" style="width:500px;height:101px" src="images/concat_img.png">
 	<!-- link to main stylesheet -->
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<br><br>
