--- a/WorkProjects/index.html
+++ b/WorkProjects/index.html
@@ -63,9 +63,11 @@
     <h1 id="TRIALS">TRIALS</h1>
     <div><p>
 		I've participated in trials originating from international standards bodies as well as corporate sponsored research into novel applications for improved efficiency and cost savings for VoIP products.
-		This is an <a href="Trials/SIPI_TestCall.wav"
+		Listen to an <a href="Trials/SIPI_TestCall.wav"
 		              target="_blank">RTP Stream</a>
-		captured from the first successful voice call between Tata Communications and France Telecom Orange via SIP-I (ITU.T 1Q.1912.5). This is the first step of a project designed to offload TDM traffic between Tata Communications and France Telecom Orange to an IP network utilizing SIP-I.
+		captured from the first successful voice call between Tata Communications and France Telecom Orange via SIP-I (ITU.T 1Q.1912.5).
+		<br><br>
+		This is the first step of a project designed to offload TDM traffic between Tata Communications and France Telecom Orange to an IP network utilizing SIP-I.
 		This project leveraged Tata Communications experience from a GSMA trial regarding SIP-I connectivity between international carriers.
 		See <a href="#PRESENTATIONS">Presentations</a>
 		for more information on this trial.
