--- a/devops/index.html
+++ b/devops/index.html
@@ -60,6 +60,14 @@
 			}
 	</script>
 	
+	<h1>SCS Papers</h1>
+		<ul style="list-style: none;">
+			<li><a href="#TRIALS">TRIALS</a></li>
+			
+			<li><a href="#PRESENTATIONS">RESENTATIONS</a></li>
+			<li><a href="#SOFTWARE_DEVELOPMENT_PROCESSES">SOFTWARE DEVELOPMENT PROCESSES</a></li>
+		</ul>
+	
     <h1 id="TRIALS">TRIALS</h1>
     <div><p>
 		I've participated in trials originating from international standards bodies as well as corporate sponsored research into novel applications for improved efficiency and cost savings for VoIP products.
@@ -67,18 +75,26 @@
 		              target="_blank">RTP Stream</a>
 		captured from the first successful voice call between Tata Communications and France Telecom Orange via SIP-I (ITU.T 1Q.1912.5).
 		<br><br>
-		This is the first step of a project designed to offload TDM traffic between Tata Communications and France Telecom Orange to an IP network utilizing SIP-I.
+		This trial provided a roadmap for a project designed to offload TDM traffic between Tata Communications and France Telecom Orange to an IP network utilizing SIP-I.
+		<br><br>
 		This project leveraged Tata Communications experience from a GSMA trial regarding SIP-I connectivity between international carriers.
-		See <a href="#PRESENTATIONS">Presentations</a>
+		See <a href="#PRESENTATIONS">RESENTATIONS</a>
 		for more information on this trial.
-		
-		The work originates from
-        <a href="http://omscs6750.gatech.edu/"
-        target="_blank">CS6750: Human-Computer Interaction (HCI)</a>
-        class projects.
     </p></div><br>
 	
-	 <h1 id="PRESENTATIONS">PRESENTATIONS</h1>
+	
+	<h1 id="SOFTWARE_DEVELOPMENT_PROCESSES">SOFTWARE DEVELOPMENT PROCESSES</h1>
+    <div><p>
+		I enhanced productivity and reliability by developing and implementing Agile Software Development Processes for development, testing and delivery to production. 
+		<br><br>
+		This cross functional work flow diagram presents a methodology; derived from fundamental concepts of the Software Development Lifecycle that promote accountability and incorporate Agile processes for HW/SW Development/Deployment:
+		Software Development Processes.pdf
+		I developed a solution and guidelines for transitioning mission critical CSO physical servers to a Virtual Environment by
+		providing an architecture to support an Infrastructure as a service (IaaS) cloud computing service model:
+		DMZ Cloud.pptx
+    </p></div><br>
+		
+	<h1 id="PRESENTATIONS">PRESENTATIONS</h1>
     <div><p>
 		I presentated original work at the GSMA Trial Team Meeting-21, September 16-17, 2008.
 		The presentation was derived from development activities while working at Tata Communications.
@@ -96,15 +112,7 @@
 		Here is an RTP stream captured by a probe (running Wireshark) that was located in Tata Communications network. This is one of the first successful calls between mobile operators over an IP eXchange (IPX) framework consisting of:
 		TELUS <=SIP-I (ANSI88)=> Tata Communications <=SIP-I (ITU-T92+)=> Telekom Austria. The voice quality of this call was subjectively rated by the two parties on call. The voice quality was also objectively verified through QOS (Jitter, Latency, Packet Loss, R-Factor) measurements.
     </p></div><br>
-		
-	<h1>SCS Papers</h1>
-		<ul style="list-style: none;">
-			<li><a href="docs/Client_Server_Security.pdf" title="A discussion on Client Server Security" target="_self">A discussion on Client Server Security</a></li>
-			<li><a href="docs/2-Factor_Auth.pdf" title="Factor Authentication" target="_self">2-Factor Authentication</a></li>
-			<li><a href="docs/Exploring_SetUID.pdf" title="Exploring SetUID" target="_self">Exploring SetUID</a></li>
-			<li><a href="docs/Memory_Protection.pdf" title="Memory Protection" target="_self">Memory Protection</a></li>
-		</ul>
-		<br><br><br>
+	<br><br><br>
 
 		<footer>
 			<ul>
