--- a/devops/index.html
+++ b/devops/index.html
@@ -60,15 +60,15 @@
 			}
 	</script>
 	
-	<h1>SCS Papers</h1>
-		<ul style="list-style: none;">
+	<h1>SECTIONS</h1>
+		<ul style="list-style-type: upper-roman;">
 			<li><a href="#TRIALS">TRIALS</a></li>
 			
 			<li><a href="#PRESENTATIONS">RESENTATIONS</a></li>
 			<li><a href="#SOFTWARE_DEVELOPMENT_PROCESSES">SOFTWARE DEVELOPMENT PROCESSES</a></li>
 		</ul>
 	
-    <h1 id="TRIALS">TRIALS</h1>
+    <h2 id="TRIALS">TRIALS</h2>
     <div><p>
 		I've participated in trials originating from international standards bodies as well as corporate sponsored research into novel applications for improved efficiency and cost savings for VoIP products.
 		Listen to an <a href="Trials/SIPI_TestCall.wav"
@@ -83,7 +83,7 @@
     </p></div><br>
 	
 	
-	<h1 id="SOFTWARE_DEVELOPMENT_PROCESSES">SOFTWARE DEVELOPMENT PROCESSES</h1>
+	<h2 id="SOFTWARE_DEVELOPMENT_PROCESSES">SOFTWARE DEVELOPMENT PROCESSES</h2>
     <div><p>
 		I enhanced productivity and reliability by developing and implementing Agile Software Development Processes for development, testing and delivery to production. 
 		<br><br>
@@ -94,7 +94,7 @@
 		DMZ Cloud.pptx
     </p></div><br>
 		
-	<h1 id="PRESENTATIONS">PRESENTATIONS</h1>
+	<h2 id="PRESENTATIONS">PRESENTATIONS</h2>
     <div><p>
 		I presentated original work at the GSMA Trial Team Meeting-21, September 16-17, 2008.
 		The presentation was derived from development activities while working at Tata Communications.
