--- a/devops/index.html
+++ b/devops/index.html
@@ -66,7 +66,7 @@
 			
 			<li><a href="#PRESENTATIONS">RESENTATIONS</a></li>
 			<li><a href="#SOFTWARE_DEVELOPMENT_PROCESSES">SOFTWARE DEVELOPMENT PROCESSES</a></li>
-		</ul>
+		</ul><br><br><br>
 	
     <h2 id="TRIALS">TRIALS</h2>
     <div><p>
@@ -80,9 +80,8 @@
 		This project leveraged Tata Communications experience from a GSMA trial regarding SIP-I connectivity between international carriers.
 		See <a href="#PRESENTATIONS">RESENTATIONS</a>
 		for more information on this trial.
-    </p></div><br>
-	
-	
+    </p></div><br><br>
+		
 	<h2 id="SOFTWARE_DEVELOPMENT_PROCESSES">SOFTWARE DEVELOPMENT PROCESSES</h2>
     <div><p>
 		I enhanced productivity and reliability by developing and implementing Agile Software Development Processes for development, testing and delivery to production. 
@@ -92,7 +91,7 @@
 		I developed a solution and guidelines for transitioning mission critical CSO physical servers to a Virtual Environment by
 		providing an architecture to support an Infrastructure as a service (IaaS) cloud computing service model:
 		DMZ Cloud.pptx
-    </p></div><br>
+    </p></div><br><br>
 		
 	<h2 id="PRESENTATIONS">PRESENTATIONS</h2>
     <div><p>
@@ -111,8 +110,7 @@
 		<br><br>
 		Here is an RTP stream captured by a probe (running Wireshark) that was located in Tata Communications network. This is one of the first successful calls between mobile operators over an IP eXchange (IPX) framework consisting of:
 		TELUS <=SIP-I (ANSI88)=> Tata Communications <=SIP-I (ITU-T92+)=> Telekom Austria. The voice quality of this call was subjectively rated by the two parties on call. The voice quality was also objectively verified through QOS (Jitter, Latency, Packet Loss, R-Factor) measurements.
-    </p></div><br>
-	<br><br><br>
+    </p></div><br><br><br>
 
 		<footer>
 			<ul>
