--- a/devops/index.html
+++ b/devops/index.html
@@ -72,26 +72,30 @@
     <div><p>
 		I've participated in trials originating from international standards bodies as well as corporate sponsored research into novel applications for improved efficiency and cost savings for VoIP products.
 		Listen to an <a href="Trials/SIPI_TestCall.mp4"
-		              target="_blank">RTP Stream</a>
+		                target="_blank">RTP Stream</a>
 		captured from the first successful voice call between Tata Communications and France Telecom Orange via SIP-I (ITU.T 1Q.1912.5).
 		<br><br>
 		This trial provided a roadmap for a project designed to offload TDM traffic between Tata Communications and France Telecom Orange to an IP network utilizing SIP-I.
 		<br><br>
 		This project leveraged Tata Communications experience from a GSMA trial regarding SIP-I connectivity between international carriers.
-		See <a href="#PRESENTATIONS">RESENTATIONS</a>
+		See <a href="#PRESENTATIONS">PRESENTATIONS</a>
 		for more information on this trial.
     </p></div><br><br>
 		
 	<h2 id="SOFTWARE_DEVELOPMENT_PROCESSES">SOFTWARE DEVELOPMENT PROCESSES</h2>
     <div><p>
-		I enhanced productivity and reliability by developing and implementing Agile Software Development Processes for development, testing and delivery to production. 
+		I enhanced productivity and reliability for Network Security Applications by developing and implementing Agile Software Development Processes for development, testing and delivery to production. 
 		<br><br>
-		This cross functional work flow diagram presents a methodology; derived from fundamental concepts of the Software Development Lifecycle that promote accountability and incorporate Agile processes for HW/SW Development/Deployment:
-		Software Development Processes.pdf
-		I developed a solution and guidelines for transitioning mission critical CSO physical servers to a Virtual Environment by
-		providing an architecture to support an Infrastructure as a service (IaaS) cloud computing service model:
-		DMZ Cloud.pptx
-    </p></div><br><br>
+		This cross functional 
+		<a href="software_dev/SW_Lifecycle_Process.pdf"
+		   target="_blank">Continuous Integration and Delivery (CI/CD). Work Flow</a>
+		presents a methodology; derived from fundamental concepts of the Software Development Lifecycle that promote accountability and incorporate Agile processes for HW/SW Development/Deployment:
+		<br><br>
+		I developed a solution and guidelines for transitioning mission critical CSO physical servers to a
+		<a href="DMZ_Cloud.pdf"
+		   target="_blank">Cloud-based Virtual Environment</a>
+		by utilizng VMware ESX Hypervisor to support an Infrastructure as a service (IaaS) cloud computing service model.
+	</p></div><br><br>
 		
 	<h2 id="PRESENTATIONS">PRESENTATIONS</h2>
     <div><p>
