--- a/devops/index.html
+++ b/devops/index.html
@@ -92,8 +92,8 @@
 		presents a methodology; derived from fundamental concepts of the Software Development Lifecycle that promote accountability and incorporate Agile processes for HW/SW Development/Deployment:
 		<br><br>
 		I developed a solution and guidelines for transitioning mission critical CSO physical servers to a
-		<a href="DMZ_Cloud.pdf"
-		   target="_blank">Cloud-based Virtual Environment</a>
+		<a href="software_dev/DMZ_Cloud.pdf"
+		   target="_blank">Virtual Environment</a>
 		by utilizng VMware ESX Hypervisor to support an Infrastructure as a service (IaaS) cloud computing service model.
 	</p></div><br><br>
 		
