--- a/devops/index.html
+++ b/devops/index.html
@@ -101,18 +101,24 @@
     <div><p>
 		I presentated original work at the GSMA Trial Team Meeting-21, September 16-17, 2008.
 		The presentation was derived from development activities while working at Tata Communications.
-		<br><br>
 		This trial was sponsored by the GSMA to verify wireless interconnections over IP, which is part of the international GSM Association's program to develop the next generation of wireless services. The trial verified that the GSMA's IP eXchange (IPX) framework can interconnect wireless networks over IP, which is more efficient and flexible than the traditional Time-Division Multiplexing technology. This trial was part of the GSMA's IPX Pre-Commercial Implementation Project, which is verifying the design and operation of IPX networks through a series of trials designed to validate technical and commercial specifications.
+		<br><br>
 		View the presentation here:
-		IPXTrialPresentationTata-Telus-Telek.pdf
+		<a href="presentations/IPXTrialPresentationTata-Telus-Telek.pdf"
+		   target="_blank">GSMA Presentation: Tata <=SIP-I (ANSI88)=> Telus <=SIP-I (ANSI88)=> Telek</a>
 		<br><br>
 		View the report here:
-		IPXTrialReportTata-Telus-TelekomAust.pdf
+		<a href="presentations/IPXTrialReportTata-Telus-TelekomAust.pdf"
+		   target="_blank">GSMA Report: Tata <=SIP-I (ANSI88)=> Telus <=SIP-I (ANSI88)=> Telek</a>
 		<br><br>
 		Press Release:
-		GSMAIPeXchangeTrial-PressRelease.pdf
+		<a href="presentations/GSMAIPeXchangeTrial-PressRelease.pdf"
+		   target="_blank">GSMA Press Release: Tata <=SIP-I (ANSI88)=> Telus <=SIP-I (ANSI88)=> Telek</a>
 		<br><br>
-		Here is an RTP stream captured by a probe (running Wireshark) that was located in Tata Communications network. This is one of the first successful calls between mobile operators over an IP eXchange (IPX) framework consisting of:
+		An <a href="presentations/TELUS-Tata-TelekomAustria-GSMA.mp4"
+		      target="_blank">RTP Stream</a>
+		captured by a probe (running Wireshark) that was located in Tata Communications network. This is the first successful call between mobile operators over an IP eXchange (IPX) framework consisting of:
+		<br>
 		TELUS <=SIP-I (ANSI88)=> Tata Communications <=SIP-I (ITU-T92+)=> Telekom Austria. The voice quality of this call was subjectively rated by the two parties on call. The voice quality was also objectively verified through QOS (Jitter, Latency, Packet Loss, R-Factor) measurements.
     </p></div><br><br><br>
 
