--- a/devops/index.html
+++ b/devops/index.html
@@ -71,7 +71,7 @@
     <h2 id="TRIALS">TRIALS</h2>
     <div><p>
 		I've participated in trials originating from international standards bodies as well as corporate sponsored research into novel applications for improved efficiency and cost savings for VoIP products.
-		Listen to an <a href="Trials/SIPI_TestCall.mp4"
+		Listen to an <a href="trials/SIPI_TestCall.mp4"
 		                target="_blank">RTP Stream</a>
 		captured from the first successful voice call between Tata Communications and France Telecom Orange via SIP-I (ITU.T 1Q.1912.5).
 		<br><br>
