--- a/devops/index.html
+++ b/devops/index.html
@@ -105,21 +105,21 @@
 		<br><br>
 		View the presentation here:
 		<a href="presentations/IPXTrialPresentationTata-Telus-Telek.pdf"
-		   target="_blank">GSMA Presentation: Tata <=SIP-I (ANSI88)=> Telus <=SIP-I (ANSI88)=> Telek</a>
+		   target="_blank">GSMA Presentation: Tata &lt=SIP-I (ANSI88)=&gt Telus &lt=SIP-I (ANSI88)=&gt Telek</a>
 		<br><br>
 		View the report here:
 		<a href="presentations/IPXTrialReportTata-Telus-TelekomAust.pdf"
-		   target="_blank">GSMA Report: Tata <=SIP-I (ANSI88)=> Telus <=SIP-I (ANSI88)=> Telek</a>
+		   target="_blank">GSMA Report: Tata &lt=SIP-I (ANSI88)=&gt Telus &lt=SIP-I (ANSI88)=&gt Telek</a>
 		<br><br>
 		Press Release:
 		<a href="presentations/GSMAIPeXchangeTrial-PressRelease.pdf"
-		   target="_blank">GSMA Press Release: Tata <=SIP-I (ANSI88)=> Telus <=SIP-I (ANSI88)=> Telek</a>
+		   target="_blank">GSMA Press Release: Tata &lt=SIP-I (ANSI88)=&gt Telus &lt=SIP-I (ANSI88)=&gt Telek</a>
 		<br><br>
 		An <a href="presentations/TELUS-Tata-TelekomAustria-GSMA.mp4"
 		      target="_blank">RTP Stream</a>
 		captured by a probe (running Wireshark) that was located in Tata Communications network. This is the first successful call between mobile operators over an IP eXchange (IPX) framework consisting of:
 		<br>
-		TELUS <=SIP-I (ANSI88)=> Tata Communications <=SIP-I (ITU-T92+)=> Telekom Austria. The voice quality of this call was subjectively rated by the two parties on call. The voice quality was also objectively verified through QOS (Jitter, Latency, Packet Loss, R-Factor) measurements.
+		TELUS &lt=SIP-I (ANSI88)=&gt Tata Communications &lt=SIP-I (ITU-T92+)=&gt Telekom Austria. The voice quality of this call was subjectively rated by the two parties on call. The voice quality was also objectively verified through QOS (Jitter, Latency, Packet Loss, R-Factor) measurements.
     </p></div><br><br><br>
 
 		<footer>
