devops White Papers

--- a/devops/index.html
+++ b/devops/index.html
@@ -63,9 +63,9 @@
 	<h1>SECTIONS</h1>
 		<ul style="list-style-type: upper-roman;">
 			<li><a href="#TRIALS">TRIALS</a></li>
-			
 			<li><a href="#PRESENTATIONS">RESENTATIONS</a></li>
 			<li><a href="#SOFTWARE_DEVELOPMENT_PROCESSES">SOFTWARE DEVELOPMENT PROCESSES</a></li>
+			<li><a href="#WHITE_PAPERS">WHITE PAPERS</a></li>
 		</ul><br><br><br>
 	
     <h2 id="TRIALS">TRIALS</h2>
@@ -121,14 +121,37 @@
 		<br>
 		TELUS &lt=SIP-I (ANSI88)=&gt Tata Communications &lt=SIP-I (ITU-T92+)=&gt Telekom Austria. The voice quality of this call was subjectively rated by the two parties on call. The voice quality was also objectively verified through QOS (Jitter, Latency, Packet Loss, R-Factor) measurements.
     </p></div><br><br><br>
+	
+	<h2 id="WHITE_PAPERS">WHITE PAPERS</h2>
+    <div><p>
+		These white papers originated from my work at Avaya Labs.
+		The following papers annotate technical solutions for implementing converged Voice, Video and Data over secure networks. Each solution included feasibility and functional analysis of customer requirements, build-out and verification.
+		The white papers, or application notes provided support for:
+		<ul style="list-style-type: upper-roman;">
+			<li><a href="#Marketing_Pre-sales">Marketing Support: Pre-Sales</a></li>
+			<li><a href="#Customers_Post-sales">Customer Support: Post-Sales</a></li>
+			<li><a href="#Corporate_Knowledge_Sharing">Corporate: Knowledge Sharing: Inter and Intra Organization</a></li>
+		</ul>
+		<br><br>
+		Business Process Applications
+			CPM21-TW6.pdf
+			CPM21SES-CUCM60.pdf
+		<br><br>
+		Video Conferencing
+			TbergAvayaVideo.pdf
+			ACM-VCS-H323.pdf 
+		<br><br>
+		Audio Conferencing
 
-		<footer>
-			<ul>
-				<p>If I'm interested in further discussing Computer Security best practices with others. Enter comments/questions in textbox and click "Send".</p>
-				<form action="mailto:rbobkoskie3@gatech.edu" method="GET">
-					<textarea name="body"></textarea>
-					<input type="submit" value="Send" />
-				</form>
-			</ul>
-		</footer>
+    </p></div><br><br>
+
+	<footer>
+		<ul>
+			<p>If I'm interested in further discussing Computer Security best practices with others. Enter comments/questions in textbox and click "Send".</p>
+			<form action="mailto:rbobkoskie3@gatech.edu" method="GET">
+				<textarea name="body"></textarea>
+				<input type="submit" value="Send" />
+			</form>
+		</ul>
+	</footer>
 </body>
