--- a/devops/index.html
+++ b/devops/index.html
@@ -127,7 +127,7 @@
 		These white papers originated from my work at Avaya Labs.
 		The following papers annotate technical solutions for implementing converged Voice, Video and Data over secure networks. Each solution included feasibility and functional analysis of customer requirements, build-out and verification.
 		The white papers, or application notes provided support for:
-		<ul style="list-style-type: upper-roman;">
+		<ul style="list-style-type: circle;">
 			<li><a href="#Marketing_Pre-sales">Marketing Support: Pre-Sales</a></li>
 			<li><a href="#Customers_Post-sales">Customer Support: Post-Sales</a></li>
 			<li><a href="#Corporate_Knowledge_Sharing">Corporate: Knowledge Sharing: Inter and Intra Organization</a></li>
