devops White Papers

--- a/devops/index.html
+++ b/devops/index.html
@@ -134,8 +134,8 @@
 		</ul>
 		<br><br>
 		Business Process Applications
-			CPM21-TW6.pdf
-			CPM21SES-CUCM60.pdf
+			<a href="whitepapers/CPM21SES-CUCM60.pdf"
+		       target="_blank">PM21SES-CUCM60.pdf</a>
 		<br><br>
 		Video Conferencing
 			TbergAvayaVideo.pdf
