--- a/devops/index.html
+++ b/devops/index.html
@@ -134,12 +134,18 @@
 		</ul>
 		<br><br>
 		Business Process Applications
+			<br>
 			<a href="whitepapers/CPM21SES-CUCM60.pdf"
 		       target="_blank">PM21SES-CUCM60.pdf</a>
+			<a href="whitepapers/CPM21-TW6 Published.pdf"
+		       target="_blank">CPM21-TW6 Published.pdf</a>
 		<br><br>
 		Video Conferencing
-			TbergAvayaVideo.pdf
-			ACM-VCS-H323.pdf 
+			<a href="whitepapers/CPM21SES-CUCM60.pdf"
+		       target="_blank">PM21SES-CUCM60.pdf</a>
+			<br>
+			<a href="whitepapers/CPM21SES-CUCM60.pdf"
+		       target="_blank">PM21SES-CUCM60.pdf</a>
 		<br><br>
 		Audio Conferencing
 
