devops White Papers

--- a/devops/index.html
+++ b/devops/index.html
@@ -141,11 +141,11 @@
 		       target="_blank">CPM21-TW6 Published.pdf</a>
 		<br><br>
 		Video Conferencing
-			<a href="whitepapers/CPM21SES-CUCM60.pdf"
-		       target="_blank">PM21SES-CUCM60.pdf</a>
+			<a href="whitepapers/ACM-VCS-H323.pdf"
+		       target="_blank">ACM-VCS-H323.pdf</a>
 			<br>
-			<a href="whitepapers/CPM21SES-CUCM60.pdf"
-		       target="_blank">PM21SES-CUCM60.pdf</a>
+			<a href="whitepapers/TbergAvayaVideo.pdf"
+		       target="_blank">TbergAvayaVideo.pdf</a>
 		<br><br>
 		Audio Conferencing
 
