devops White Papers

--- a/devops/index.html
+++ b/devops/index.html
@@ -135,16 +135,18 @@
 		<br><br>
 		Business Process Applications
 			<br>
-			<a href="whitepapers/CPM21SES-CUCM60.pdf"
+			<a href="whitepapers/Audio_Conferencing_Publications/CPM21SES-CUCM60.pdf"
 		       target="_blank">PM21SES-CUCM60.pdf</a>
-			<a href="whitepapers/CPM21-TW6 Published.pdf"
+			<br>
+			<a href="whitepapers/Audio_Conferencing_Publications/CPM21-TW6 Published.pdf"
 		       target="_blank">CPM21-TW6 Published.pdf</a>
 		<br><br>
 		Video Conferencing
-			<a href="whitepapers/ACM-VCS-H323.pdf"
+			<br>
+			<a href="whitepapers/Video_Conferencing_Publications/ACM-VCS-H323.pdf"
 		       target="_blank">ACM-VCS-H323.pdf</a>
 			<br>
-			<a href="whitepapers/TbergAvayaVideo.pdf"
+			<a href="whitepapers/Video_Conferencing_Publications/TbergAvayaVideo.pdf"
 		       target="_blank">TbergAvayaVideo.pdf</a>
 		<br><br>
 		Audio Conferencing
