devops White Papers

--- a/devops/index.html
+++ b/devops/index.html
@@ -135,10 +135,10 @@
 		<br>
 		Business Process Applications
 			<br>
-			<a href="whitepapers/Audio_Conferencing_Publications/CPM21SES-CUCM60.pdf"
+			<a href="whitepapers/Business_Process_Applications/CPM21SES-CUCM60.pdf"
 		       target="_blank">PM21SES-CUCM60.pdf</a>
 			<br>
-			<a href="whitepapers/Audio_Conferencing_Publications/CPM21-TW6 Published.pdf"
+			<a href="whitepapers/Business_Process_Applications/CPM21-TW6 Published.pdf"
 		       target="_blank">CPM21-TW6 Published.pdf</a>
 		<br><br>
 		Video Conferencing
@@ -150,7 +150,12 @@
 		       target="_blank">TbergAvayaVideo.pdf</a>
 		<br><br>
 		Audio Conferencing
-
+			<br>
+			<a href="whitepapers/Audio_Conferencing_Publications/CPM21SES-CUCM60.pdf"
+		       target="_blank">PM21SES-CUCM60.pdf</a>
+			<br>
+			<a href="whitepapers/Audio_Conferencing_Publications/CPM21-TW6 Published.pdf"
+		       target="_blank">CPM21-TW6 Published.pdf</a>
     </p></div><br><br>
 
 	<footer>
