devops White Papers

--- a/devops/index.html
+++ b/devops/index.html
@@ -124,7 +124,7 @@
 	
 	<h2 id="WHITE_PAPERS">WHITE PAPERS</h2>
     <div><p>
-		These white papers originated from my work at Avaya Labs.
+		These peer-reviewed and published white papers originated from my work at Avaya Labs.
 		The following papers annotate technical solutions for implementing converged Voice, Video and Data over secure networks. Each solution included feasibility and functional analysis of customer requirements, build-out and verification.
 		The white papers, or application notes provided support for:
 		<ul style="list-style-type: circle;">
@@ -134,28 +134,34 @@
 		</ul>
 		<br>
 		Business Process Applications
-			<br>
-			<a href="whitepapers/Business_Process_Applications/CPM21SES-CUCM60.pdf"
-		       target="_blank">PM21SES-CUCM60.pdf</a>
-			<br>
-			<a href="whitepapers/Business_Process_Applications/CPM21-TW6 Published.pdf"
-		       target="_blank">CPM21-TW6 Published.pdf</a>
+		<br>
+			<ul style="list-style-type: none;">
+				<li><a href="whitepapers/Business_Process_Applications/CPM21SES-CUCM60.pdf"
+					 target="_blank">PM21SES-CUCM60.pdf</a></li>
+				<br>
+				<li><a href="whitepapers/Business_Process_Applications/CPM21-TW6 Published.pdf"
+					 target="_blank">CPM21-TW6 Published.pdf</a></li>
+			</ul>
 		<br><br>
 		Video Conferencing
-			<br>
-			<a href="whitepapers/Video_Conferencing_Publications/ACM-VCS-H323.pdf"
-		       target="_blank">ACM-VCS-H323.pdf</a>
-			<br>
-			<a href="whitepapers/Video_Conferencing_Publications/TbergAvayaVideo.pdf"
-		       target="_blank">TbergAvayaVideo.pdf</a>
+		<br>
+			<ul style="list-style-type: none;">
+				<li><a href="whitepapers/Video_Conferencing_Publications/ACM-VCS-H323.pdf"
+					 target="_blank">ACM-VCS-H323.pdf</a></li>
+				<br>
+				<li><a href="whitepapers/Video_Conferencing_Publications/TbergAvayaVideo.pdf"
+					 target="_blank">TbergAvayaVideo.pdf</a></li>
+			</ul>
 		<br><br>
 		Audio Conferencing
-			<br>
-			<a href="whitepapers/Audio_Conferencing_Publications/CPM21SES-CUCM60.pdf"
-		       target="_blank">PM21SES-CUCM60.pdf</a>
-			<br>
-			<a href="whitepapers/Audio_Conferencing_Publications/CPM21-TW6 Published.pdf"
-		       target="_blank">CPM21-TW6 Published.pdf</a>
+		<br>
+			<ul style="list-style-type: none;">
+				<li><a href="whitepapers/Audio_Conferencing_Publications/CPM21SES-CUCM60.pdf"
+					 target="_blank">PM21SES-CUCM60.pdf</a></li>
+				<br>
+				<li><a href="whitepapers/Audio_Conferencing_Publications/CPM21-TW6 Published.pdf"
+					 target="_blank">CPM21-TW6 Published.pdf</a></li>
+			</ul>
     </p></div><br><br>
 
 	<footer>
