devops White Papers

--- a/devops/index.html
+++ b/devops/index.html
@@ -138,7 +138,6 @@
 			<ul style="list-style-type: none;">
 				<li><a href="whitepapers/Business_Process_Applications/CPM21SES-CUCM60.pdf"
 					 target="_blank">PM21SES-CUCM60.pdf</a></li>
-				<br>
 				<li><a href="whitepapers/Business_Process_Applications/CPM21-TW6 Published.pdf"
 					 target="_blank">CPM21-TW6 Published.pdf</a></li>
 			</ul>
@@ -148,7 +147,6 @@
 			<ul style="list-style-type: none;">
 				<li><a href="whitepapers/Video_Conferencing_Publications/ACM-VCS-H323.pdf"
 					 target="_blank">ACM-VCS-H323.pdf</a></li>
-				<br>
 				<li><a href="whitepapers/Video_Conferencing_Publications/TbergAvayaVideo.pdf"
 					 target="_blank">TbergAvayaVideo.pdf</a></li>
 			</ul>
@@ -156,11 +154,25 @@
 		Audio Conferencing
 		<br>
 			<ul style="list-style-type: none;">
-				<li><a href="whitepapers/Audio_Conferencing_Publications/CPM21SES-CUCM60.pdf"
-					 target="_blank">PM21SES-CUCM60.pdf</a></li>
-				<br>
-				<li><a href="whitepapers/Audio_Conferencing_Publications/CPM21-TW6 Published.pdf"
-					 target="_blank">CPM21-TW6 Published.pdf</a></li>
+				<li><a href="whitepapers/Audio_Conferencing_Publications/MX50-CUCM60-M2K.pdf"
+					 target="_blank">MX50-CUCM60-M2K.pdf</a></li>
+				<li><a href="whitepapers/Audio_Conferencing_Publications/S6100AcmImgCas.pdf"
+					 target="_blank">S6100AcmImgCas.pdf</a></li>
+				
+				<li><a href="whitepapers/Audio_Conferencing_Publications/S6100AcmImgPri.pdf"
+					 target="_blank">S6100AcmImgPri.pdf</a></li>
+				<li><a href="whitepapers/Audio_Conferencing_Publications/S6100AcmImgSip.pdf"
+					 target="_blank">S6100AcmImgSip.pdf</a></li>
+				<li><a href="whitepapers/Audio_Conferencing_Publications/S6100AcmPri.pdf"
+					 target="_blank">S6100AcmPri.pdf</a></li>
+				<li><a href="whitepapers/Audio_Conferencing_Publications/S6100AcmSip.pdf"
+					 target="_blank">S6100AcmSip.pdf</a></li>
+				<li><a href="whitepapers/Audio_Conferencing_Publications/S6100I55Sip.pdf"
+					 target="_blank">S6100I55Sip.pdf</a></li>
+				<li><a href="whitepapers/Audio_Conferencing_Publications/S6100MveSip.pdf"
+					 target="_blank">S6100MveSip.pdf</a></li>
+				<li><a href="whitepapers/Audio_Conferencing_Publications/S6100SesSip.pdf"
+					 target="_blank">S6100SesSip.pdf</a></li>
 			</ul>
     </p></div><br><br>
 
