--- a/devops/index.html
+++ b/devops/index.html
@@ -60,6 +60,10 @@
 			}
 	</script>
 	
+	<div><p>
+		This page highlights my work experience with Avaya, AT&T and Tata Communications. Novel solutions, collaboration, software development and network configuration/architecture are documented.
+    </p></div><br>
+	
 	<h1>SECTIONS</h1>
 		<ul style="list-style-type: upper-roman;">
 			<li><a href="#TRIALS">TRIALS</a></li>
