Modify Landing Page

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
 			<button type="button" onclick="setBG_Black()" class="btn btn-primary">HIGH CONTRAST</button>
 			<button type="button" onclick="setBG_White()" class="btn btn-primary">STD  CONTRAST</button>
 		</div>
-		
+		<br>
 		<div class="btn-group">
-			<button type="button" href="devops" class="btn btn-primary">DEV OPS</button>
+			<button type="button" href="/devops" class="btn btn-primary">DEV OPS</button>
 			<div class="dropdown">
-				<button class="dropbtn">Prototypes and Research Papers</button>
+				<button class="dropbtn">PROTOTYPES and RESEARCH</button>
 				<div class="dropdown-content">
 					<script> HIDING THIS CODE:
 							<h5 class="dropdown-header">GitHub Hosted Web Sites</h5>
