Modify Landing Page

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		</div>
 		<br>
 		<div class="btn-group">
-			<button type="button" href="/devops" class="btn btn-primary">DEV OPS</button>
+			<button type="button" onclick="location.href='devops';" class="btn btn-primary">DEV OPS</button>
 			<div class="dropdown">
 				<button class="dropbtn">PROTOTYPES and RESEARCH</button>
 				<div class="dropdown-content">
