--- a/devops/index.html
+++ b/devops/index.html
@@ -133,9 +133,9 @@
 		The following papers annotate technical solutions for implementing converged Voice, Video and Data over secure networks. Each solution included feasibility and functional analysis of customer requirements, build-out and verification.
 		The white papers, or application notes provided support for:
 		<ul style="list-style-type: circle;">
-			<li><a Marketing Support: Pre-Sales</a></li>
-			<li><a Customer  Support: Post-Sales</a></li>
-			<li><a Corporate Knowledge Sharing: Inter and Intra Organization</a></li>
+			<li>Marketing Support: Pre-Sales</li>
+			<li>Customer  Support: Post-Sales</li>
+			<li>Corporate Knowledge Sharing: Inter and Intra Organization</li>
 		</ul>
 		<br>
 		Business Process Applications
