--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 				padding: 10px 24px; /* Some padding */
 				cursor: pointer; /* Pointer/hand icon */
 				display: block; /* Make the buttons appear below each other */
+				width: 50%;
 			}
 
 			/* Clear floats (clearfix hack) */
@@ -122,7 +123,7 @@
 		</div>
 		
 		<div class="btn-group">
-			<verticleButton>Apple</verticleButton>
+			<verticleButton>APPLE</verticleButton>
 			<verticleButton>Samsung</verticleButton>
 			<verticleButton>Sony</verticleButton>
 		</div>
