--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 			<verticleButton>APPLE</verticleButton>
 			<verticleButton>Samsung</verticleButton>
 			<verticleButton>
+			<div class="dropdown">
 				<button class="dropbtn">PROTOTYPES and RESEARCH</button>
 				<div class="dropdown-content">
 					<h5 class="dropdown-header">Research</h5>
@@ -136,6 +137,7 @@
 					<li><a class="dropdown-item" href="https://goo.gl/photos/KEpwD9mZ3EBcycQk7"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype-1</a></li>
 					<li><a class="dropdown-item" href="https://goo.gl/photos/Hv9WaPvd4QrQJ9TZA"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype-2</a></li>
 				</div>
+			</div>
 			</verticleButton>
 		</div>
 		
