--- a/index.html
+++ b/index.html
@@ -125,9 +125,8 @@
 		<div class="btn-group">
 			<verticleButton>APPLE</verticleButton>
 			<verticleButton>Samsung</verticleButton>
-			<verticleButton>
 			<div class="dropdown">
-				<button class="dropbtn">PROTOTYPES and RESEARCH</button>
+				<button class="verticleButton">PROTOTYPES and RESEARCH</button>
 				<div class="dropdown-content">
 					<h5 class="dropdown-header">Research</h5>
 					<li><a class="dropdown-item" href="/cs7646" title="Machine Learning (ML)">Machine Learning (ML)</a></li>
@@ -138,7 +137,6 @@
 					<li><a class="dropdown-item" href="https://goo.gl/photos/Hv9WaPvd4QrQJ9TZA"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype-2</a></li>
 				</div>
 			</div>
-			</verticleButton>
 		</div>
 		
 		<script>
