--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 				padding: 10px 24px; /* Some padding */
 				cursor: pointer; /* Pointer/hand icon */
 				display: block; /* Make the buttons appear below each other */
-				width: 50%;
+				/* width: 50%; */
+				min-width: 259px;
 			}
 
 			/* Clear floats (clearfix hack) */
@@ -63,11 +64,9 @@
 			.dropdown-content {
 				display: none;
 				position: absolute;
-				# background-color: #f9f9f9;
-				min-width: 190px;
+				min-width: 259px;
 				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 				padding: 30px 5px 10px 10px;
-				# padding: 0;
 				z-index: 1;
 			}
 
