--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 				padding: 10px 24px; /* Some padding */
 				cursor: pointer; /* Pointer/hand icon */
 				display: block; /* Make the buttons appear below each other */
-				/* width: 50%; */
-				min-width: 259px;
+				width: 55%;
 			}
 
 			/* Clear floats (clearfix hack) */
@@ -56,9 +55,20 @@
 			}
 			
 			.dropdown {
-				position: relative;
-				display: inline-block;
-				background-color: #f9f9f9;
+				/*
+				   position: relative;
+				   display: inline-block;
+				   background-color: #f9f9f9;
+				*/
+				background-color: #4CAF50; /* Green background */
+				border: 1px solid green; /* Green border */
+				color: white; /* White text */
+				font-weight: bold;
+				font-size: 18px;
+				padding: 10px 24px; /* Some padding */
+				cursor: pointer; /* Pointer/hand icon */
+				display: block; /* Make the buttons appear below each other */
+				width: 55%;
 			}
 
 			.dropdown-content {
