--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				padding: 10px 24px; /* Some padding */
 				cursor: pointer; /* Pointer/hand icon */
 				display: block; /* Make the buttons appear below each other */
-				width: 55%;
+				width: 50%;
 			}
 
 			/* Clear floats (clearfix hack) */
@@ -55,28 +55,19 @@
 			}
 			
 			.dropdown {
-				/*
-				   display: inline-block;
-				   background-color: #f9f9f9;
-				*/
 				position: relative;
-				background-color: #4CAF50; /* Green background */
-				border: 1px solid green; /* Green border */
-				color: white; /* White text */
-				font-weight: bold;
-				font-size: 18px;
-				padding: 10px 24px; /* Some padding */
-				cursor: pointer; /* Pointer/hand icon */
-				display: block; /* Make the buttons appear below each other */
-				width: 55%;
+				display: inline-block;
+				background-color: #f9f9f9;
 			}
 
 			.dropdown-content {
 				display: none;
 				position: absolute;
-				min-width: 259px;
+				# background-color: #f9f9f9;
+				min-width: 190px;
 				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 				padding: 30px 5px 10px 10px;
+				# padding: 0;
 				z-index: 1;
 			}
 
