--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				padding: 10px 24px; /* Some padding */
 				cursor: pointer; /* Pointer/hand icon */
 				display: block; /* Make the buttons appear below each other */
-				width: 48%;
+				width: 50%;
 			}
 
 			/* Clear floats (clearfix hack) */
@@ -57,13 +57,7 @@
 			.dropdown {
 				position: relative;
 				display: inline-block;
-				background-color: #4CAF50; /* Green background */
-				border: 1px solid green; /* Green border */
-				color: white; /* White text */
-				font-weight: bold;
-				font-size: 18px;
-				padding: 10px 24px; /* Some padding */
-				cursor: pointer; /* Pointer/hand icon */
+				background-color: #f9f9f9;
 			}
 
 			.dropdown-content {
