--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				padding: 10px 24px; /* Some padding */
 				cursor: pointer; /* Pointer/hand icon */
 				display: block; /* Make the buttons appear below each other */
-				width: 50%;
+				width: 48%;
 			}
 
 			/* Clear floats (clearfix hack) */
@@ -57,7 +57,13 @@
 			.dropdown {
 				position: relative;
 				display: inline-block;
-				background-color: #f9f9f9;
+				width: 48%;
+				background-color: #4CAF50; /* Green background */
+				border: 1px solid green; /* Green border */
+				color: white; /* White text */
+				font-weight: bold;
+				font-size: 18px;
+				padding: 10px 24px; /* Some padding */
 			}
 
 			.dropdown-content {
