--- a/index.html
+++ b/index.html
@@ -56,11 +56,13 @@
 			
 			.dropdown {
 				position: relative;
+				float: right;
 				display: inline-block;
 				width: 48%;
 			}
 
 			.dropdown-content {
+				/* z-index: 1; */
 				display: none;
 				position: absolute;
 				min-width: 190px;
