--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
 			}
 			
 			.dropdown {
+				background-color: #4CAF50; /* Green background */
+				border: 1px solid green; /* Green border */
+				color: white; /* White text */
+				font-weight: bold;
+				font-size: 18px;
+				
 				position: relative;
 				float: right;
 				display: inline-block;
