--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
 				color: white; /* White text */
 				font-weight: bold;
 				font-size: 18px;
-				
 				position: relative;
-				float: right;
 				display: inline-block;
 				width: 48%;
 			}
@@ -70,7 +68,9 @@
 			.dropdown-content {
 				/* z-index: 1; */
 				display: none;
-				position: absolute;
+				/* position: absolute; */
+				position: relative;
+				float: right;
 				min-width: 190px;
 				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 				padding: 30px 5px 10px 10px;
