--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 			}
 			
 			.dropdown {
-				background-color: #4CAF50; /* Green background */
-				border: 1px solid green; /* Green border */
-				color: white; /* White text */
+				background-color: black;
+				border: 1px solid orange;
+				color: orange;
 				font-weight: bold;
 				font-size: 18px;
 				position: relative;
