--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
 				font-size: 18px;
 				position: relative;
 				display: inline-block;
-				width: 40%;
+				width: 48%;
 			}
 
 			.dropdown-content {
 				/* z-index: 1; */
 				display: none;
-				position: absolute;
-				/* position: relative; */
-				/* min-width: 190px; */
-				width: 40%;
+				/* position: absolute; */
+				position: relative;
+				float: right;
+				min-width: 190px;
 				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 				padding: 30px 5px 10px 10px;
 			}
